# IMSystem

./: pom.xml
settings/: core-site.xml  hdfs-site.xml  hive-site.xml  mapred-site.xml  nginx.conf  yarn-site.xml
src/main/java/com/huawei/kunpengimsystem/: KunpengImSystemApplication.java
src/main/java/com/huawei/kunpengimsystem/config/: CustomHandshakeHandler.java  WebsocketConfig.java
src/main/java/com/huawei/kunpengimsystem/controller/: ChatController.java
src/main/java/com/huawei/kunpengimsystem/service/Impl/: MessageServiceImpl.java
src/main/java/com/huawei/kunpengimsystem/utils/: Clibrary.java  NativeUtil.java  Result.java  ResultUtil.java
src/main/resources/db/: data.sql
src/main/resources/mappers/: MessageMapper.xml
src/main/resources/nativecode/: CMakeLists.txt  FileCrc32.cpp  FileCrc32.h  Sha256.cpp  Sha256.h  Solution.cpp  Solution.h  solution.cpp
src/main/resources/others/: conversation.txt
